IMP-2688 - Disable failing unit tests