@@ -63,6 +63,7 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>2.16</version>
                         <configuration>
+                            <argLine>-Xms800m -Xmx800m -XX:MaxPermSize=500m -XX:-UseSplitVerifier</argLine>
                             <includes>
                                 <include>**/*IT.java</include>
                             </includes>
